<resources>
    <string name="app_name">Solitaire</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_extreme">Extreme</string>
    <string name="difficulty_legendary">Legendary</string>
    <string name="history_title">Win History</string>
    <string name="menu_title">Solitaire</string>
    <string name="timer_default">00:00</string>
    <string name="score_default">Score: 0</string>
    <string name="button_new_game">New Game</string>
    <string name="button_hint">Hint</string>
    <string name="button_undo">Undo</string>
    <string name="button_reveal">Reveal</string>
    <string name="button_draw">Draw</string>
</resources>
